# cuda_scalability

./: .gitignore  .sample.cu.swp  CMakeLists.txt  README.md  sample.cpp  sample.cu  sample_one.cpp  sample_one.cu  sample_strong.cpp  sample_strong.cu  sample_weak.cpp  sample_weak.cu  weak_1GPU.o1306760
batch/: anselm_strong_1CPU.pbs  anselm_strong_1GPU.pbs  anselm_strong_2CPU.pbs  anselm_strong_2GPU.pbs  anselm_strong_3CPU.pbs  anselm_strong_3GPU.pbs  anselm_strong_4CPU.pbs  anselm_strong_4GPU.pbs  anselm_weak_1CPU.pbs  anselm_weak_1GPU.pbs  anselm_weak_2CPU.pbs  anselm_weak_2GPU.pbs  anselm_weak_3CPU.pbs  anselm_weak_3GPU.pbs  anselm_weak_4CPU.pbs  anselm_weak_4GPU.pbs  strong_CPU1.pbs  strong_CPU2.pbs  strong_CPU3.pbs  strong_CPU4.pbs  strong_GPU1.pbs  strong_GPU2.pbs  strong_GPU3.pbs  strong_GPU4.pbs  weak_CPU1.pbs  weak_CPU2.pbs  weak_CPU3.pbs  weak_CPU4.pbs  weak_GPU1.pbs  weak_GPU2.pbs  weak_GPU3.pbs  weak_GPU4.pbs
results/: strong_1CPU.o1306804  strong_1GPU.o1306800  strong_1GPU.o1306892  strong_1GPU.o1306893  strong_2CPU.o1306805  strong_2GPU.o1306801  strong_2GPU.o1306894  strong_3CPU.o1306806  strong_3GPU.o1306802  strong_4CPU.o1306807  strong_4GPU.o1306803  strong_CPU1.o1306925  strong_CPU1.o1306935  strong_CPU1.o1306961  strong_CPU2.o1306926  strong_CPU2.o1306936  strong_CPU2.o1306963  strong_CPU3.o1306927  strong_CPU3.o1306937  strong_CPU3.o1306964  strong_CPU4.o1306928  strong_CPU4.o1306938  strong_CPU4.o1306962  strong_GPU1.o1306921  strong_GPU1.o1306947  strong_GPU1.o1306959  strong_GPU2.o1306922  strong_GPU2.o1306949  strong_GPU2.o1306960  strong_GPU3.o1306923  strong_GPU3.o1306950  strong_GPU4.o1306924  strong_GPU4.o1306934  weak_1CPU.o1306796  weak_1GPU.o1306792  weak_2CPU.o1306797  weak_2GPU.o1306793  weak_3CPU.o1306798  weak_3GPU.o1306794  weak_4CPU.o1306799  (+13 more)
scripts/: anselm_pbs_strong.py  anselm_pbs_weak.py  common.py
util/: anselm_interactive_1nodes_gpu.pbs  module_load_anselm
